src/z80asm/z80asm2/t/20-preproc/expected/if_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/if_11.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/if_11.asm...
t/20-preproc/input/if_11.asm:1:4: error: Expected expression after IF
    #if ; no expression
       ^
t/20-preproc/input/if_11.asm:3:5: error: Expected a value, got "*"
    #if *1 ; syntax error in expression
        ^
t/20-preproc/input/if_11.asm:5:5: error: ASMPC is not allowed in a constant expression
    #if asmpc ; not constant expression
        ^
t/20-preproc/input/if_11.asm:7:2: error: Unexpected ELSE directive without matching IF
    #else ; else without if
     ^
t/20-preproc/input/if_11.asm:8:2: error: Unexpected ELSEIF directive without matching IF
    #elseif ; elseif without if
     ^
t/20-preproc/input/if_11.asm:9:2: error: Unexpected ELIF directive without matching IF
    #elif ; elif without if
     ^
t/20-preproc/input/if_11.asm:10:2: error: Unexpected ENDIF directive without matching IF
    #endif ; endif without if
     ^
t/20-preproc/input/if_11.asm:13:2: error: Multiple ELSE in IF block
    #else ; two elses
     ^
t/20-preproc/input/if_11.asm:17:2: error: Unexpected ELSEIF directive after ELSE
    #elseif ; elseif after else
     ^
t/20-preproc/input/if_11.asm:21:2: error: Unexpected ELIF directive after ELSE
    #elif ; elif after else
     ^
# file: t/20-preproc/input/if_11.asm
EndOfLine	"\n"	23:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
